--- a/learn-certs-pr/d365-functional-consultant-field-service.yml
+++ b/learn-certs-pr/d365-functional-consultant-field-service.yml
@@ -2,11 +2,13 @@
 title: 'Microsoft Certified: Dynamics 365 Field Service Functional Consultant Associate'
 metadata:
   title: 'Microsoft Certified: Dynamics 365 Field Service Functional Consultant Associate'
-  description: Microsoft Dynamics 365 Field Service Functional Consultants konfigurieren die Field Service-Anwendung, implementieren Lösungen, die den Lebenszyklus des Außendienstes steuern, und setzen die Connected Field Service (IoT)-Lösung ein.
+  description: 'Microsoft Dynamics 365 Field Service Functional Consultants konfigurieren die Field Service-Anwendung, implementieren Lösungen, die den Lebenszyklus des Außendienstes steuern, und setzen die Connected Field Service (IoT)-Lösung ein.'
 uid: certification.d365-functional-consultant-field-service
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
-  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
+  <div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
+  <div><strong>MB-200 WIRD IM SEPTEMBER 2020 DURCH EINE NEUE PRÜFUNG, <a href="/learn/certifications/exams/pl-200">PL-200</a>, ERSETZT. Sie können diese Zertifizierung erwerben, indem Sie MB-200 oder PL-200 plus MB-240 bestehen, bevor MB-200 am 31. Dezember 2020 eingestellt wird. Nach der Einstellung von MB-200 müssen Sie PL-200 und MB-240 bestehen, um diese Zertifizierung zu erhalten.</strong><br/><br/></div></div>
 
   Microsoft Dynamics 365 Field Service Functional Consultants konfigurieren die Field Service-Anwendung, implementieren Lösungen, die den Lebenszyklus des Außendienstes steuern, und setzen die Connected Field Service (IoT)-Lösung ein.
 subTitle: Microsoft Dynamics 365 Field Service Functional Consultants konfigurieren die Field Service-Anwendung, implementieren Lösungen, die den Lebenszyklus des Außendienstes steuern, und setzen die Connected Field Service (IoT)-Lösung ein.
@@ -29,7 +31,7 @@ roles:
 - functional-consultant
 type: role-based
 products:
-- dynamics
+- dynamics-365
 - dynamics-field-service
 courses:
 - uid: course.mb-200t00
@@ -49,22 +51,25 @@ exams:
 - uid: exam.mb-200
 - uid: exam.mb-240
 resources:
-- title: Lernpfad zur Zertifizirung
-  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Dynamics 365 Field Service Functional Consultant Associate.'
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35I72
+- title: Zertifizierungsposter
+  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
+- title: Reise zur Zertifizierung
+  description: Informieren Sie sich über Schritte zur Zertifizierung und die verfügbaren Ressourcen, die Sie bei der Vorbereitung unterstützen können.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4C7Ft
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Zertifizierungsposter
-  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+- title: Lernpfad zur Zertifizirung
+  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4C56X
 - title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: deals.md
-- title: Unterstützung von Zertifizierungen
-  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
-  href: help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
+- title: Unterstützung von Zertifizierungen
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+  href: help.md
 
