--- a/learn-certs-pr/exams/mb-500.yml
+++ b/learn-certs-pr/exams/mb-500.yml
@@ -7,22 +7,22 @@ uid: exam.mb-500
 displayName: MB-500
 summary: |-
   <div>
-  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am  22. Mai 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/><br/></div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
+  <div><strong> Der Inhalt dieser Prüfung wurde am 22. Mai 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.</strong><br/><br/></div>
   </div>
 
-  Kandidaten für dieses examens sind Entwickler, die Anwendungen mit Finance and Operations Apps in Microsoft Dynamics 365 implementieren und erweitern, die den Unternehmensanforderungen entsprechen. Die Kandidaten bieten vollständig realisierte Lösungen, indem sie standardisierte Anwendungskodierungsmuster, erweiterbare Funktionen und externe Integrationen verwenden.
+  Kandidaten für diese Prüfung sind Entwickler, die Anwendungen mit Finance and Operations Apps in Microsoft Dynamics 365 implementieren und erweitern, die den Unternehmensanforderungen entsprechen. Die Kandidaten bieten vollständig realisierte Lösungen, indem sie standardisierte Anwendungskodierungsmuster, erweiterbare Funktionen und externe Integrationen verwenden.
 
-  Die Kandidaten sind verantwortlich für die Entwicklung der Geschäftslogik unter Verwendung von X++, für die Erstellung und Änderung von Finanz- und Betriebsberichten und Arbeitsbereichen, für die Anpassung von Benutzeroberflächen, für die Bereitstellung von Endpunkten und APIs zur Unterstützung von Power Platform-Anwendungen und externen Systemen, für die Durchführung von Tests, für die Überwachung der Leistung, für die Analyse und Manipulation von Daten, für die Erstellung von technischen Designs und Implementierensdetails sowie für die Implementieren von Berechtigungsrichtlinien und Sicherheitsanforderungen.
+  Die Kandidaten sind verantwortlich für die Entwicklung der Geschäftslogik unter Verwendung von X++, für die Erstellung und Änderung von Finanz- und Betriebsberichten und Arbeitsbereichen, für die Anpassung von Benutzeroberflächen, für die Bereitstellung von Endpunkten und APIs zur Unterstützung von Power Platform-Anwendungen und externen Systemen, für die Durchführung von Tests, für die Überwachung der Leistung, für die Analyse und Manipulation von Daten, für die Erstellung von technischen Designs und Implementierungsdetails sowie für die Implementierung von Berechtigungsrichtlinien und Sicherheitsanforderungen.
 
-  Die Kandidaten beteiligen sich an der Migration von Daten und Objekten aus Alt- und Fremdsystemen, an der Integration von Finanz- und Betriebsanwendungen mit anderen Systemen, an der Implementieren des Application Lifecycle Management Prozesses, an der Planung des funktionalen Designs für Lösungen und an der Verwaltung von Finanz- und Betriebsumgebungen mit Hilfe von Lifecycle Services (LCS).
+  Die Kandidaten beteiligen sich an der Migration von Daten und Objekten aus Alt- und Fremdsystemen, an der Integration von Finanz- und Betriebsanwendungen mit anderen Systemen, an der Implementierung des Application Lifecycle Management Prozesses, an der Planung des funktionalen Designs für Lösungen und an der Verwaltung von Finanz- und Betriebsumgebungen mit Hilfe von Lifecycle Services (LCS).
 
   Die Kandidaten sollen über fundierte Kenntnisse und Erfahrungen im Umgang mit dem zugrunde liegenden Framework, mit den Datenstrukturen und den mit den Finanz- und Betriebslösungen verbundenen Objekten verfügen.
 
   Die Kandidaten sollten Erfahrung mit folgenden Produkten haben&#58; Visual Studio, Azure DevOps, LCS-Tools und SQL Server Management Studio.
 
   Die Kandidaten sollen Erfahrung in der Entwicklung von Code mit objektorientierten Programmiersprachen, in der Analyse und Manipulation von Daten mit Transact-SQL-Code, sowie in der Erstellung und Ausführung von Windows PowerShell-Befehlen und -Skripten haben.
-subTitle: 'dieses examens misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Planen der Architektur und Design der Lösung, Anwenden von Entwicklerwerkzeugen, Design und Entwickeln von AOT-Elementen, Entwickeln und Testen von Code, Implementieren der Berichterstellung, Integrieren und Verwalten von Datenlösungen, Implementieren von Sicherheit und Optimieren der Leistung.'
+subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Planen der Architektur und Design der Lösung, Anwenden von Entwicklerwerkzeugen, Design und Entwickeln von AOT-Elementen, Entwickeln und Testen von Code, Implementieren der Berichterstellung, Integrieren und Verwalten von Datenlösungen, Implementieren von Sicherheit und Optimieren der Leistung.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE42pBB
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-500&examname=Exam%20MB-500:%20Microsoft%20Dynamics%20365%20Finance%20and%20Operations%20Apps%20Developer&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-500
@@ -31,18 +31,18 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am  22. Mai 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
+- Der Inhalt dieser Prüfung wurde am 22. Mai 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
 - Planen der Architektur und Lösungsentwicklung (10-15%)
 - Entwickler-Tools anwenden (10-15%)
 - Design und Entwicklung von AOT-Elementen (20-25%)
-- Entwickeln und Testen des Codes (10 -15%)
+- Entwickeln und Testen des Codes (10-15%)
 - Berichterstellung einführen (10-15%)
 - Integration und Verwaltung von Datenlösungen (10-15%)
 - Implementieren der Sicherheit und Leistungsoptimierung (10-15%)
 roles:
 - developer
 products:
-- dynamics
+- dynamics-365
 - dynamics-finance-operations
 exams:
 - uid: exam.mb-300
@@ -59,14 +59,14 @@ relatedCertifications:
     uid: certification.d365-finance-and-operations-apps-developer-associate
 resources:
 - title: Lernpfad zur Zertifizirung
-  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Dynamics 365: Finance and Operations Apps Developer Associate.'
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4o4j5
+  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Cdas
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
-  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
 - title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
@@ -77,7 +77,7 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
+  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
