--- a/learn-certs-pr/exams/mb-600.yml
+++ b/learn-certs-pr/exams/mb-600.yml
@@ -7,15 +7,15 @@ uid: exam.mb-600
 displayName: MB-600
 summary: |-
   <div>
-  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wird am 30. Juli 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.<br/><br/></div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
+  <div><strong> Der Inhalt dieser Prüfung wurde am 30. Juli 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.</strong><br/><br/></div>
   </div>
 
-  Lösungsarchitekten für Microsoft Dynamics 365 + Power-Plattform führen erfolgreiche Implementierungen durch und konzentrieren sich auf Lösungen, die allgemeine geschäftliche und technische Anforderungen von Unternehmen erfüllen.
+  Lösungsarchitekten für Microsoft Dynamics 365 + Power Platform führen erfolgreiche Implementierungen durch und konzentrieren sich auf Lösungen, die allgemeine geschäftliche und technische Anforderungen von Unternehmen erfüllen.
 
-  Ein Solution Architects (Lösungsarchitekt) verfügt sowohl über das technische als auch das Fachwissen über die modellgesteuerten Power Platform-Anwendungen in Dynamics 365. Diese umfassen Dynamics 365 for Customer Service, Dynamics 365 for Field Service, Dynamics 365 for Marketing sowie Dynamics 365 for Sales, die zugehörige Microsoft Cloud-solutions(Lösungen und) Drittanbieter-Technologien. Der Solution Architects (Lösungsarchitekt) setzt seine Kenntnisse und Erfahrungen während des gesamten Projekt-Lebenszyklus ein. Der Solution Architects (Lösungsarchitekt) führt proaktive und präventive Arbeiten durch, die den Wert der Investition des Kunden steigern und die Gesundheit des Unternehmens fördern. Das erfordert die Fähigkeit, Möglichkeiten zur Lösung von Geschäftsproblemen zu identifizieren.
+  Ein Solution Architect verfügt sowohl über das technische als auch das Fachwissen über die modellgesteuerten Power Platform-Anwendungen in Dynamics 365. Diese umfassen Dynamics 365 for Customer Service, Dynamics 365 for Field Service, Dynamics 365 for Marketing sowie Dynamics 365 for Sales, die zugehörige Microsoft Cloud-Lösungen und Drittanbieter-Technologien. Der Solution Architect setzt seine Kenntnisse und Erfahrungen während des gesamten Projekt-Lebenszyklus ein. Der Solution Architect führt proaktive und präventive Arbeiten durch, die den Wert der Investition des Kunden steigern und die Gesundheit des Unternehmens fördern. Das erfordert die Fähigkeit, Möglichkeiten zur Lösung von Geschäftsproblemen zu identifizieren.
 
-  Solution Architects (Lösungsarchitekt) haben Erfahrung in den fachlichen und technischen Disziplinen der Power Platform und modellgesteuerten Anwendungen in Dynamics 365. Solution Architects (Lösungsarchitekt) sollen in der Lage sein, Designentscheidungen in den Bereichen Entwicklung, Konfiguration, Integration, Infrastruktur, Sicherheit, Verfügbarkeit, Storage und Änderungsmanagement zu erleichtern. In dieser Rolle stellen Lösungsarchitekten die Balance zwischen den fachlichen und nicht-fachlichen geschäftlichen Anforderungen eines Projekts her.
+  Solution Architects haben Erfahrung in den fachlichen und technischen Disziplinen der Power Platform und modellgesteuerten Anwendungen in Dynamics 365. Solution Architects sollen in der Lage sein, Designentscheidungen in den Bereichen Entwicklung, Konfiguration, Integration, Infrastruktur, Sicherheit, Verfügbarkeit, Storage und Änderungsmanagement zu erleichtern. In dieser Rolle stellen Lösungsarchitekten die Balance zwischen den fachlichen und nicht-fachlichen geschäftlichen Anforderungen eines Projekts her.
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Anforderungsanalyse, Lösungskonzeption sowie Entwicklung und Implementierung der Lösung.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE440oW
@@ -25,14 +25,14 @@ locales:
 levels:
 - advanced
 skills:
-- Der Inhalt dieser Prüfung wird am 30. Juli 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.
+- Der Inhalt dieser Prüfung wurde am 30. Juli 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
 - Analysieren der Anforderungen und Planen einer Lösung (30-35%)
 - Eine Lösung entwickeln (45-50%)
 - Die Lösung umsetzen (20-25%)
 roles:
 - solution-architect
 products:
-- dynamics
+- dynamics-365
 - power-apps
 courses:
 - uid: course.mb-600t00
@@ -43,14 +43,14 @@ relatedCertifications:
     uid: certification.power-apps-and-d365-solution-architect-expert
 resources:
 - title: Lernpfad zur Zertifizirung
-  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Dynamics 365 + Power Platform Solution Architect Expert.'
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4tKUY
+  description: 'Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.'
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4C7FB
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
-  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
 - title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
@@ -61,7 +61,7 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
+  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
