--- a/learn-certs-pr/exams/mb-800.yml
+++ b/learn-certs-pr/exams/mb-800.yml
@@ -6,19 +6,29 @@ metadata:
 uid: exam.mb-800
 displayName: MB-800
 summary: |-
-  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
 
-  Ein Dynamics 365 Business Central-Kernanwendung Functional Consultant implementiert und konfiguriert die Business Central-App, einschließlich des Einrichtens der Kernanwendungsfunktionen, der Module und der Migration von Daten nach Business Central. Berater konfigurieren die Benutzeroberfläche in Zusammenarbeit mit dem Implementierungsteam, um dem Unternehmen Handhabbarkeit und einfache Navigation zu bieten. Sie konfigurieren Rollenzentren, einschließlich der Anpassung von Erkenntnissen, Hinweisen, Aktionskacheln, Berichten, Diagrammen und der Erweiterung von Business Central mit Hilfe von Power Platform-Komponenten.
+  Kandidaten für diese Prüfung sind funktionale Berater, die Kernprozesse für die Einrichtung von Anwendungen für kleine und mittlere Unternehmen implementieren. Sie implementieren und konfigurieren die Dynamics 365 Business Central-App, einschließlich der Einrichtung der wichtigsten App-Funktionen und -Module sowie der Migration von Daten nach Business Central.
 
-  <div style='font-weight&#58; bold;'><br/>Hinweis&#58; Diese Prüfung wird im September 2020 verfügbar sein.</div>
-subTitle: 'Diese Prüfung wird im September 2020 verfügbar sein. Diese Prüfung misst Ihre Fähigkeit, die folgenden Aufgaben auszuführen: Einrichten von Business Central, Konfigurieren von Finanzdaten, Konfigurieren von Vertrieb und Einkauf, Einrichten von Vorgängen und Verwenden von Power-Platform-Komponenten. '
+  Berater konfigurieren die Benutzeroberfläche in Zusammenarbeit mit dem Implementierungsteam, um dem Unternehmen Handhabbarkeit und einfache Navigation zu bieten. Sie konfigurieren Rollenzentren, einschließlich der Anpassung von Erkenntnissen, Hinweisen, Aktionskacheln, Berichten, Diagrammen und der Erweiterung von Business Central mit Hilfe von Power Platform-Komponenten.
+
+  Kandidaten haben über die Business Central-App praktische Kenntnisse über die Erfüllung der Benutzeranforderungen, einschließlich grundlegender Kenntnisse über Finanzmanagement, Verkauf, Einkauf und Inventar.
+
+  Kandidaten für diese Prüfung sind normalerweise auf einen oder mehrere Funktionssätze von Business Central spezialisiert. Sie verstehen die Rolle von Business Central in Bezug auf die Dynamics 365-Anwendungssuite.
+
+  <div><strong><br/>Hinweis&#58; Diese Prüfung wird im Oktober 2020 verfügbar sein.</strong></div>
+subTitle: 'Diese Prüfung wird im Oktober 2020 verfügbar sein. Diese Prüfung misst Ihre Fähigkeit, die folgenden Aufgaben auszuführen: Einrichten von Business Central; Finanzdaten konfigurieren; Verkauf und Einkauf konfigurieren; und Business Central-Vorgänge ausführen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
+pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CxSE
 locales:
 - en
 levels:
 - intermediate
 skills:
-- Noch nicht verfügbar
+- Business Central einrichten (20-25%)
+- Finanzdaten konfigurieren (25-30%)
+- Verkauf und Einkauf konfigurieren (10-15%)
+- Business Central-Vorgänge durchführen (30-35%)
 roles:
 - functional-consultant
 products:
@@ -44,7 +54,7 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
+  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
