--- a/learn-certs-pr/exams/mb2-716.yml
+++ b/learn-certs-pr/exams/mb2-716.yml
@@ -6,13 +6,13 @@ metadata:
 uid: exam.mb-2-716
 displayName: MB2-716
 summary: |-
-  <div><div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
   <div><strong>Diese Prüfung wird am 31. Januar 2021 um 23&#58;59 Uhr (Ortszeit) eingestellt. Nach diesem Datum können Sie die Prüfung nicht mehr ablegen. Erfahren Sie mehr über <a href='/learn/certifications/retired-certification-exams'>bevorstehende Prüfungseinstellungen</a>.<br/><br/></strong></div>
+  <div><strong> Der Inhalt dieser Prüfung wurde am 4. Februar 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.</strong></div><br/>
   </div>
 
   Einzelpersonen, die eine Zertifizierung auf Microsoft Dynamics 365 Anpassung und Konfiguration erhalten möchten, sollten diese Prüfung ablegen. Das Publikum umfasst in der Regel Entwickler, Implementierungsberater, technisches Supportpersonal und Systemadministratoren. Sie beurteilen die Geschäftsanforderungen eines Kunden und konfigurieren und passen die Anwendung an.
-
-  <div style='font-weight&#58; bold;'><br/>Am 4. Februar 2020 wurde der Inhalt dieses Examens aktualisiert. Laden Sie den Änderungsbeleg für Prüfung Nr MB2-716 herunter und lesen Sie ihn durch, um mehr über diese Änderungen und deren Auswirkungen auf die Kompetenzbemessung zu erfahren.</div>
 subTitle: Einzelpersonen, die eine Zertifizierung auf Microsoft Dynamics 365 Anpassung und Konfiguration erhalten möchten, sollten diese Prüfung ablegen. Das Publikum umfasst in der Regel Entwickler, Implementierungsberater, technisches Supportpersonal und Systemadministratoren. Sie beurteilen die Geschäftsanforderungen eines Kunden und konfigurieren und passen die Anwendung an.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4o2AP
