--- a/learn-certs-pr/exams/mo-101.yml
+++ b/learn-certs-pr/exams/mo-101.yml
@@ -6,10 +6,10 @@ metadata:
 uid: exam.mo-101
 displayName: MO-101
 summary: |-
-  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
 
   Die Prüfung deckt die Fähigkeit ab, Word-Umgebungen an die Projektanforderungen anzupassen, und die Produktivität zu steigern. Zu den Beispielen für Dokumente auf Expert-Level gehören ein Geschäftsplan, eine Forschungsarbeit, ein Buch, eine spezielle Broschüre und ein Serienbrief. Von den Kandidaten wird erwartet, dass sie die korrekte Anwendung der Hauptfunktionen von Word auf Expertenebene demonstrieren und Aufgaben unabhängig ausführen können.
-subTitle: dieses examens misst die Kompetenz in der Erstellung und Verwaltung von professionellen Dokumenten für eine Vielzahl von speziellen Zwecken und Situationen. Die Prüfung deckt die Fähigkeit ab, Word-Umgebungen an die Projektanforderungen anzupassen und die Produktivität zu steigern. Zu den Beispielen für Dokumente auf Expert-Level gehören ein Geschäftsplan, eine Forschungsarbeit, ein Buch, eine spezielle Broschüre und ein Serienbrief.
+subTitle: Diese Prüfung misst die Kompetenz in der Erstellung und Verwaltung von professionellen Dokumenten für eine Vielzahl von speziellen Zwecken und Situationen. Die Prüfung deckt die Fähigkeit ab, Word-Umgebungen an die Projektanforderungen anzupassen und die Produktivität zu steigern. Zu den Beispielen für Dokumente auf Expert-Level gehören ein Geschäftsplan, eine Forschungsarbeit, ein Buch, eine spezielle Broschüre und ein Serienbrief.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3WS8K
 providers:
@@ -17,6 +17,7 @@ providers:
   examUrl: http://www.certiport.com/locator
 locales:
 - en
+- es-mx
 levels:
 - intermediate
 skills:
@@ -40,7 +41,7 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
+  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
