--- a/learn-certs-pr/exams/pl-200.yml
+++ b/learn-certs-pr/exams/pl-200.yml
@@ -6,25 +6,28 @@ metadata:
 uid: exam.pl-200
 displayName: PL-200
 summary: |-
-  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
 
-  Zu den Aufgaben eines Power Platform Functional Consultant gehören Netzwerksuche, Erfassen von Bedürfnissen, die Einbeziehung von Fachexperten und Stakeholdern, das Übersetzen von sowie Lösungen und Anwendungen zu konfigurieren.
+  Kandidaten für diese Prüfung führen Recherchen durch, erfassen Anforderungen, beziehen Fachexperten und Interessenvertreter ein, übersetzen Anforderungen und konfigurieren Power Platform-Lösungen und -Anwendungen. Sie erstellen Anwendungserweiterungen, benutzerdefinierte Benutzererfahrungen, Systemintegrationen, Datenkonvertierungen, benutzerdefinierte Prozessautomatisierung und benutzerdefinierte Visualisierungen.
 
-  Der Functional Consultant implementiert die Komponenten einer Lösung, zu denen Anwendungserweiterungen, individuelle Benutzererlebnisse, Systemintegrationen, Datenkonvertierungen, benutzerdefinierte Prozessautomatisierung und benutzerdefinierte Visualisierungen gehören.
+  Die Kandidaten setzen das von einem Lösungsarchitekten und in Zusammenarbeit mit ihm erstellte Design sowie die von den Designern der Benutzererfahrung festgelegten Standards, das Branding und die Artefakte um. Sie entwerfen Integrationen, um eine nahtlose Integration mit Anwendungen und Diensten von Drittanbietern zu ermöglichen.
 
-  <div style='font-weight&#58; bold;'><br/>Hinweis&#58; Diese Prüfung wird im Oktober 2020 verfügbar sein.</div>
-subTitle: 'Diese Prüfung wird im Oktober 2020 verfügbar sein. Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben auszuführen: Konfigurieren des Common Data Service; Erstellen einer Power App; Erstellen von Automatisierungen mit Power Automate. Konfigurieren von Power Virtual Agents und Erstellen von Visualisierungen mit Power BI.'
+  Die Kandidaten arbeiten aktiv mit Mitgliedern des Qualitätssicherungsteams zusammen, um sicherzustellen, dass die Lösungen den funktionalen und nicht funktionalen Anforderungen entsprechen. Sie identifizieren, generieren und liefern Artefakte für die Verpackung und Bereitstellung an DevOps-Ingenieure und bieten Power Platform-Administratoren Betriebs- und Wartungstrainings an.
+
+  <div><strong><br/>Hinweis&#58; Diese Prüfung wird im September 2020 verfügbar sein.</strong></div>
+subTitle: 'Diese Prüfung wird im September 2020 verfügbar sein. Diese Prüfung misst Ihre Fähigkeit, die folgenden Aufgaben auszuführen: Konfigurieren des Common Data Services; Apps mit Hilfe von Power Apps erstellen. Erstellen und Verwalten von Power Automate; Power Virtual Agents Chatbots erstellen sowie Power Apps in andere Apps und Services integrieren.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
+pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CQVs
 locales:
 - en
 levels:
 - intermediate
 skills:
-- Konfigurieren des Common Data Service
-- Erstellen Sie eine Power App
-- Erstellen Sie Automatisierungen mit Power Automate
-- Konfigurieren Sie Power Virtual Agents
-- Erstellen Sie Visualisierungen mit Power BI
+- Konfigurieren Sie den Common Data Service (25-30%)
+- Erstellen Sie Apps mit Hikfe von Power Apps (20-25%)
+- Erstellen und Verwalten von Power Automate (15-20%)
+- Implementieren Sie Power Virtual Agents Chatbots (10-15%)
+- Integrieren Sie Power Apps in andere Apps und Services (15-20%)
 roles:
 - business-analyst
 - developer
@@ -46,8 +49,8 @@ resources:
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
-  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
 - title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
@@ -58,7 +61,7 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
+  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
