--- a/learn-certs-pr/mcsa-microsoft-dynamics-365-for-operations.yml
+++ b/learn-certs-pr/mcsa-microsoft-dynamics-365-for-operations.yml
@@ -4,14 +4,20 @@ metadata:
   title: 'MCSA: Microsoft Dynamics 365 for Operations'
   description: 'MCSA: Microsoft Dynamics 365 for Operations'
 uid: certification.mcsa-microsoft-dynamics-365-for-operations
-iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
+iconUrl: /media/learn/certification/badges/mcsa-badge.svg
 summary: |-
   <div>
-  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
   <div><strong>Diese Zertifizierung endet am 31. Januar 2021. Nach diesem Datum können Sie diese Zertifizierung nicht mehr erhalten. Alle Zertifizierungen, die Sie vor deren Ablaufen erhalten haben, werden weiterhin auf Ihrem Transkript im <a href='https://www.microsoft.com/learning/dashboard.aspx'>Zertifizierungs-Dashboard</a> angezeigt. Sie können auch <a href='/learn/certifications/retired-certifications'>alle abgelaufenen Zertifizierungen durchsuchen</a>.</strong><br/><br/></div>
   </div>
 
   Diese Zertifizierung demonstriert Ihre Kompetenz in Microsoft Dynamics 365 Technologien, um die grundlegenden technischen und Entwicklungsaufgaben zu implementieren, die erforderlich sind, um Microsoft Dynamics 365 for Operations anzupassen. Diese Zielgruppe umfasst in der Regel technische Berater, Programmierer und IT-Mitarbeiter.
+
+  Um die MCSA&#58; Microsoft Dynamics 365 for Operations-Zertifizierung zu erhalten&#58;
+  - Bestehen Sie die Prüfung [MB6-894&#58; Entwicklung, Erweiterungen und Bereitstellung für Microsoft Dynamics 365 Finance](/learn/certifications/exams/mb6-894)
+  - Und bestehen Sie eine der folgenden Prüfungen&#58;
+    - [70-764&#58; Verwalten einer SQL-Datenbankinfrastruktur](/learn/certifications/exams/70-764)
+    - [70-765&#58; Bereitstellung von SQL-Datenbanken](/learn/certifications/exams/70-765)
 subTitle: Diese Zertifizierung demonstriert Ihre Kompetenz in Microsoft Dynamics 365 Technologien, um die grundlegenden technischen und Entwicklungsaufgaben zu implementieren, die erforderlich sind, um Microsoft Dynamics 365 for Operations anzupassen. Diese Zielgruppe umfasst in der Regel technische Berater, Programmierer und IT-Mitarbeiter.
 levels:
 - intermediate
