--- a/learn-certs-pr/mcse-productivity-certification.yml
+++ b/learn-certs-pr/mcse-productivity-certification.yml
@@ -7,17 +7,17 @@ uid: certification.mcse-productivity-certification
 iconUrl: /media/learn/certification/badges/mcse-badge.svg
 summary: |-
   <div>
-  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
-  <div><strong>dieses zertifizierung wird am 31. Januar 2021 um 23&#58;59 Uhr (Ortszeit) eingestellt. Nach diesem Datum können Sie diese Zertifizierung nicht mehr erhalten. Mehr erfahren <a href='/learn/certifications/retired-certifications'>über bevorstehende Zertifizierungsabbrüche</a>.</strong><br/><br/></div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
+  <div><strong>Diese Zertifizierung wird am 31. Januar 2021 um 23&#58;59 Uhr (Ortszeit) eingestellt. Nach diesem Datum können Sie diese Zertifizierung nicht mehr erhalten. Erfahren Sie mehr <a href='/learn/certifications/retired-certifications'>über bevorstehende Zertifizierungsabbrüche</a>.</strong><br/><br/></div>
   </div>
 
   Diese Zertifizierung bestätigt, dass Sie die erforderlichen Kompetenzen haben, um Ihr Unternehmen in die Cloud zu bringen, die Produktivität und Flexibilität der Benutzer zu steigern, den Datenverlust zu reduzieren und die Datensicherheit für Ihre Organisation zu verbessern. Diese Zertifizierung kann verwendet werden, um eine der Voraussetzungen zu erfüllen, um ein [Microsoft 365 Certified Enterprise Administrator Expert](https://www.microsoft.com/learning/m365-enterprise-administrator.aspx) zu werden.
 
-  Um ein MCSE Productivity Solutions Expert zu werden, bestehen die folgenden Anforderungen&#58;
-  - Erhalten Sie eine Voraussetzung für die Zertifizierung
+  Um ein MCSE Productivity Solutions Expert zu werden, bestehen die folgenden&#58;
+  - Erlangen Sie eine Voraussetzung für die Zertifizierung
     - Voraussetzungsoption 1&#58; [MCSA Windows Server 2012](https://www.microsoft.com/learning/mcsa-windows-server-certification.aspx)
     - Voraussetzungsoption 2&#58; [MCSA Windows Server 2016](https://www.microsoft.com/learning/mcsa-windows-server-2016-certification.aspx)
-  - Und absolvieren Sie wahlweise eine dieser Prüfungen
+  - Und absolvieren Sie eine der Wahlprüfungen
     - [70-333&#58; Deploying Enterprise Voice with Skype for Business 2015](/learn/certifications/exams/70-333)
     - [70-334&#58; Core Solutions of Microsoft Skype for Business](/learn/certifications/exams/70-334)
     - [70-339&#58; Managing Microsoft SharePoint Server 2016](/learn/certifications/exams/70-339)
@@ -29,7 +29,7 @@ skills:
 - none
 roles:
 - administrator
-type: role-based
+type: mcse
 products:
 - m365
 courses:
