--- a/learn-certs-pr/power-platform-functional-consultant-associate.yml
+++ b/learn-certs-pr/power-platform-functional-consultant-associate.yml
@@ -2,24 +2,24 @@
 title: 'Microsoft Certified: Power Platform Functional Consultant Associate'
 metadata:
   title: 'Microsoft Certified: Power Platform Functional Consultant Associate'
-  description: Diese Zertifizierung wird im Oktober 2020 verfügbar sein. Der Funktionsberater von Power-Platform muss über umfassende Kenntnisse der Power-Platform verfügen, einschließlich des praktischen Verständnisses der Fähigkeiten, Grenzen und Einschränkungen.
+  description: Diese Zertifizierung wird im September 2020 verfügbar sein. Der Funktionsberater von Power-Platform muss über umfassende Kenntnisse der Power-Platform verfügen, einschließlich des praktischen Verständnisses der Fähigkeiten, Grenzen und Einschränkungen.
 uid: certification.power-platform-functional-consultant-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
-  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></font></div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong><br/><br/></font></div>
 
   Der Funktionsberater von Power-Platform muss über umfassende Kenntnisse der Power-Platform verfügen, einschließlich des praktischen Verständnisses der Fähigkeiten, Grenzen und Einschränkungen. Sie sollten Erfahrung mit Power-Platform-Maker-Tools haben, um Lösungen zu erstellen, die Power-Platform und Microsoft 365 verwenden. Zertifizierte Funktionsberater sollten über Kenntnisse in Datenmodellierung, User Experience Design, Anforderungsanalyse und Prozessanalyse verfügen.
 
-  <div><br/><strong>Hinweis&#58; Diese Zertifizierung wird im Oktober 2020 verfügbar sein.</strong></div>
-subTitle: Diese Zertifizierung wird im Oktober 2020 verfügbar sein. Der Funktionsberater von Power-Platform muss über umfassende Kenntnisse der Power-Platform verfügen, einschließlich des praktischen Verständnisses der Fähigkeiten, Grenzen und Einschränkungen.
+  <div><br/><strong>Hinweis&#58; Diese Zertifizierung wird im September 2020 verfügbar sein.</strong></div>
+subTitle: Diese Zertifizierung wird im September 2020 verfügbar sein. Der Funktionsberater von Power-Platform muss über umfassende Kenntnisse der Power-Platform verfügen, einschließlich des praktischen Verständnisses der Fähigkeiten, Grenzen und Einschränkungen.
 levels:
 - intermediate
 skills:
-- Konfigurieren des Common Data Service
-- Erstellen Sie eine Power App
-- Erstellen Sie Automatisierungen mit Power Automate
-- Konfigurieren Sie Power Virtual Agents
-- Erstellen Sie Visualisierungen mit Power BI
+- Konfigurieren Sie den Common Data Service
+- Erstellen Sie Apps mit Hikfe von Power Apps
+- Erstellen und Verwalten von Power Automate
+- Implementieren Sie Power Virtual Agents Chatbots
+- Integrieren Sie Power Apps in andere Apps und Services
 roles:
 - business-analyst
 - developer
@@ -34,22 +34,26 @@ products:
 - power-platform
 - office-teams
 - power-virtual-agents
+pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4D1eL
 exams:
 - uid: exam.pl-200
 resources:
+- title: Zertifizierungsposter
+  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
+- title: Reise zur Zertifizierung
+  description: Informieren Sie sich über Schritte zur Zertifizierung und die verfügbaren Ressourcen, die Sie bei der Vorbereitung unterstützen können.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CfjH
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Zertifizierungsposter
-  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
 - title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: deals.md
-- title: Unterstützung von Zertifizierungen
-  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
-  href: help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
+- title: Unterstützung von Zertifizierungen
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+  href: help.md
 
