--- a/learn-certs-pr/courses/az-400t00.yml
+++ b/learn-certs-pr/courses/az-400t00.yml
@@ -110,7 +110,7 @@ outlineSection: |-
 
   #### Lab&#58; Agile Planunng and Portfolio-Management mit Azure-Boards
 
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58; 
+  Nach Abschluss dieses Moduls können die Schüler&#58; 
   - Transformation mit geteilten Zielen und Fristen planen
   - Ein Projekt auswählen und Projektmetriken und KPIs erkennen
   - Erstellen eines Teams und einer agilen Organisationsstruktur
@@ -133,7 +133,7 @@ outlineSection: |-
 
   #### Lab&#58; Versionskontrolle mit Git
 
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Vorteile bei der Nutzung einer Lösungskontrolle beschreiben 
   - Azure Repos und GitHub beschreiben
   - Von TFVC zu Git migrieren 
@@ -149,7 +149,7 @@ outlineSection: |-
 
   #### Lab&#58; Codeüberprüfung mit Pull-Anfragen
 
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Erklären, wie Git-Repos strukturiert werden 
   - Beschreiben von verzweigten Git-Workflows
   - Pull-Anfragen für Zusammenarbeit und Codeüberprüfungen nutzen 
@@ -165,7 +165,7 @@ outlineSection: |-
 
   #### Lab&#58; Aktualisieren von Packages
 
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Empfehlen der Artefakt Managementtools und Praktiken
   - Abstrahieren von Common Packages zur Aktivierung von Sharing und Wiederverwendung
   - Artifakte migrieren und konsolidieren
@@ -192,11 +192,7 @@ outlineSection: |-
 
   #### Lab&#58; Integration der externen Quellensteuerung in Azure-Pipelines
 
-  #### Lab&#58; Jenkins in Azure-Pipelines integrieren
-
-  #### Lab&#58; Bereitstellen einer Mehrfach-Container-Anwendung
-
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Implementieren und Verwalten von Build-Infrastrukturen
   - Erklären, warum kontinuierliche Integration wichtig ist
   - Implementieren einer kontinuierlichen Integration mit Azure-DevOps
@@ -212,8 +208,9 @@ outlineSection: |-
 
   #### Lab&#58; Azure Key Vault in Azure DevOps integrieren
 
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Verwaltung von Anwendungskonfiguration und Geheimnissen
+  - Umsetzen von Tools zum Verwalten von Sicherheit und Compliance in einer Pipeline
 
 
   ### Modul 7&#58; Codequalität und Sicherheitsrichtlinien verwalten
@@ -223,7 +220,7 @@ outlineSection: |-
 
   #### Lab&#58; Technische Schuld mit Azure DevOps und SonarCloud verwalten
 
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Verwalten der Codequalität, einschließlich&#58; technische Probleme, SonarCloud und andere Werkzeuglösungen
   - Sicherheitsrichtlinien mit Open Source und OWASP verwalten
 
@@ -234,7 +231,7 @@ outlineSection: |-
 
   #### Lab&#58; Modernisieren vorhandener ASP.NET-Apps mit Azure
 
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Eine Container-Strategie umsetzen, einschließlich der Unterschiede zwischen Containern und virtuellen Maschinen und der Verwendung von Containern durch Microservices
   - Container mit Docker umsetzen
 
@@ -244,16 +241,16 @@ outlineSection: |-
   - Package-Sicherheit
   - Open-Source Software
   - Integration von Lizenz- und Schwachstellen-Scans
-  - Implementieren einer Versionsstrategie (Git-Version) 
+  - Implementieren einer Versionsstrategie 
 
   #### Lab&#58; Open Source-Sicherheit und -Lizenz mit WhiteSource verwalten
 
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Prüfen von Open Source Software-Paketen auf Sicherheit und Lizenzen für Übereinstimmung mit Firmenstandards
   - Eine Build-Pipeline konfigurieren, um Zugriff auf Package-Sicherheit und Lizenzbewertung zu haben
   - Konfigurieren von sicherem Zugriff auf Package-Feeds
   - Überprüfung der Codebasis, um Codeabhängigkeiten zu identifizieren, die in Pakete umgewandelt werden können.
-  - Identifizieren und Empfehlen von standardisierten Paket-Typen und Versionen für alle Lösungsaspekte 
+  - Identifizieren und Empfehlen von standardisierten Paket-Typen und Versionen für alle Lösungsaspekte
   - Überarbeitung bestehender Build-Pipelines zur Umsetzung einer Versionsstrategie, die Pakete Freigabe
   - Verwalten von Sicherheit und Compliance
 
@@ -266,7 +263,7 @@ outlineSection: |-
   - Auswählen eines Bereitstellungsmusters
   - Auswahl des richtigen Freigabe-Management-Tools 
 
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Zwischen Freigabe und Bereitstellung unterscheiden
   - Komponenten der Freigabe-Pipeline definieren
   - Wichtige Überlegungen für die Erstellung einer Freigabestrategie erklären
@@ -295,7 +292,7 @@ outlineSection: |-
 
   #### Lab&#58; Erstellen eines Freigabe-Dashboards
 
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Terminologie erklären, die in Azure-DevOps und anderen Freigabe-Managementtools verwendet wird
   - Erklären, was Build- und Freigabe-Aufgaben sind, was sie können und einige verfügbare Bereitstellungsaufgaben
   - Agent, Agenten-Schlange und Agenten-Pool klassifizieren
@@ -320,7 +317,7 @@ outlineSection: |-
 
   #### Lab&#58; Feature-Flag-Verwaltung mit LaunchDarkly und Azure DevOps
 
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Bereitstellungsmuster beschreiben
   - Implementieren einer Blau-Grün-Bereitstellung
   - Canary-Freigabe umsetzen
@@ -336,7 +333,7 @@ outlineSection: |-
 
   #### Lab&#58; Überwachen der Anwendungsleistung
 
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Konfigurieren der Crash Report-Integration für Client Apps
   - Überwachungs- und Status-Dashboards entwickeln
   - Implementierung eines Routings für die Daten des Crash-Berichts der Client-Anwendung
@@ -344,20 +341,7 @@ outlineSection: |-
   - Integration und Konfiguration von Ticketingsystemen mit dem Arbeitsmanagementsystem des Entwicklungsteams
 
 
-  ### Modul 14&#58; Implementieren Sie eine mobile DevOps-Strategie
-  #### Lektionen
-  - Einführung in Mobile DevOps
-  - Einführung in das Visual Studio App Center
-  - Management von Mobile Target Device Sets und Verteilergruppen
-  - Management von Target UI Test Device Sets
-  - Bereitstellung von Testergeräten für den Einsatz
-  - Erstellen von öffentlichen und privaten Verteilergruppen erstellen 
-
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Implementieren einer mobilen DevOps-Strategie
-
-
-  ### Modul 15&#58; Infrastruktur und Konfiguration Azure Tools
+  ### Modul 14&#58; Infrastruktur und Konfiguration Azure Tools
   #### Lektionen
   - Infrastruktur als Code- und Konfigurationsmanagement
   - Erstellen von Azure-Ressourcen mit Hilfe von ARM-Vorlagen
@@ -369,12 +353,12 @@ outlineSection: |-
 
   #### Lab&#58; Azure-Bereitstellungen mit Hilfe von Resource Manager-Vorlagen
 
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Infrastruktur und Konfiguration als Code-Richtlinien anwenden.
   - Infrastruktur mit Microsoft Automatisierungstechnologien, wie z.B. ARM-Vorlagen, PowerShell und Azure CLI bereitstellen und verwalten
 
 
-  ### Modul 16&#58; Azure-Bereitstellungsmodelle und -Services
+  ### Modul 15&#58; Azure-Bereitstellungsmodelle und -Services
   #### Lektionen
   - Bereitstellungsmodule und -optionen
   - Azure-IaaS(Infrastructure-as-a-Service)-Services
@@ -382,23 +366,23 @@ outlineSection: |-
   - Serverlose und HPC Computer-Services
   - Azure Service-Struktur 
 
-  ### Lab&#58; Azure Automation - IaaS- oder PaaS-Bereitstellung
+  #### Lab&#58; Bereitstellen einer angedockten Java-App für die Azure Web App for Container
 
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Bereitstellungsmodelle und Dienste beschreiben, die in Azure verfügbar sind
 
 
-  ### Modul 17&#58; Erstellen und Verwalten der Kubernetes-Service-Infrastruktur
+  ### Modul 16&#58; Erstellen und Verwalten der Kubernetes-Service-Infrastruktur
   #### Lektionen
   - Azure Kubernetes Service
 
   #### Lab&#58; Bereitstellen einer Multi-Container-Anwendung für den Azure Kubernetes-Service
 
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Verwaltete Kubernetes-Cluster bereitstellen und konfigurieren
 
 
-  ### Modul 18&#58; Infrastruktur von Drittanbietern als Code-Tools, die mit Azure verfügbar sind
+  ### Modul 17&#58; Infrastruktur von Drittanbietern als Code-Tools, die mit Azure verfügbar sind
   #### Lektionen
   - Chef
   - Puppet
@@ -409,23 +393,23 @@ outlineSection: |-
 
   #### Lab&#58; Automatisieren von Infrastrukturbereitstellungen in der Cloud mit Terraform- und Azure-Pipelines
 
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  - Bereitstellung und Konfiguration der Infrastruktur unter Verwendung von Werkzeugen und Diensten von Drittanbietern mit Azure, z.B. Chef, Puppet, Ansible, SaltStack und Terraform
+  Nach Abschluss dieses Moduls können die Schüler&#58;
+  - Bereitstellung und Konfiguration der Infrastruktur unter Verwendung von Werkzeugen und Diensten von Drittanbietern mit Azure, z.B. Chef, Puppet, Ansible, und Terraform
 
 
-  ### Modul 19&#58; Compliance und Sicherheit in Ihre Infrastruktur implementieren
+  ### Modul 18&#58; Compliance und Sicherheit in Ihre Infrastruktur implementieren
   #### Lektionen
   - Sicherheits- und Compliance-Prinzipien mit DevOps
   - Azure Sicherheits-Center 
 
-  ### Lab&#58; Implementieren von Tools zum Verwalten von Sicherheit und Compliance in einer Azure DevOps-Pipeline.
+  #### Lab&#58; Implementieren von Tools zum Verwalten von Sicherheit und Compliance in einer Azure DevOps-Pipeline.
 
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Infrastruktur und Konfigurationsstrategien und die richtigen Werkzeuge für eine Freigabepipeline und Anwendungsinfrastruktur definieren
   - Compliance und Sicherheit in Ihre Anwendungsinfrastruktur implementieren
 
 
-  ### Modul 20&#58; System-Feedback-Mechanismen empfehlen und entwerfen
+  ### Modul 19&#58; System-Feedback-Mechanismen empfehlen und entwerfen
   #### Lektionen
   - Die innere Schleife
   - Kontinuierliches Bewusstsein für das Experimentieren
@@ -435,7 +419,7 @@ outlineSection: |-
 
   #### Lab&#58; Integration zwischen Azure DevOps und Teams
 
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Praktiken entwerfen, um Endnutzer-Zufriedenheit zu messen
   - Entwickeln von Prozessen zum Erfassen und Analysieren von Nutzerrückmeldungen externer Quellen
   - Konzept zum Routing für Crash-Report daten der Client-Anwendung
@@ -443,7 +427,7 @@ outlineSection: |-
   - Empfehlen von Trackingtools für System und Funktionsnutzung
 
 
-  ### Modul 21&#58; Feedback-Mechanismen optimieren
+  ### Modul 20&#58; Feedback-Mechanismen optimieren
   #### Lektionen
   - Zuverlässigkeitstechnik der Seite
   - Telemetrieanalyse für Erstellung einer Baseline
@@ -451,8 +435,9 @@ outlineSection: |-
   - Alarmanalyse für Erstellung einer Baseline
   - Schuldlose Rückblicke und eine Just Culture 
 
-  Nach Abschluss dieses Moduls können die Teilnehmer&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Alarmanalyse für Erstellung einer Baseline
   - Telemetrieanalyse für Erstellung einer Baseline
   - Durchführung von Live-Überprüfungen vor Ort und Erfassung von Feedback bei Systemausfällen
   - Fortlaufende Feinabstimmung zur Minimierung von sinnlosen oder nichtausführbaren Alarmen vornehmen
+
