--- a/learn-certs-pr/courses/ms-040t00.yml
+++ b/learn-certs-pr/courses/ms-040t00.yml
@@ -13,7 +13,7 @@ skillsGained:
 - skill: Bereitstellen des OneDrive Synchronisierungs-Clients.
 - skill: Gruppenrichtlinien verwenden, um die Einstellungen des OneDrive-Sync-Client zu steuern.
 - skill: Verwalten der externen Freigabe für Daten in Microsoft SharePoint und OneDrive.
-- skill: Nutzerprofileigenschaften konfigurieren.
+- skill: Nutzerprofileigenschaften konfigurieren
 - skill: Zielgruppen verwalten.
 - skill: Verwenden des App-Katalogs, um benutzerdefinierte Apps zu verwalten.
 - skill: Begriffsgruppen, Begriffssätze und Begriffe erstellen und verwalten.
@@ -24,11 +24,11 @@ locales:
 levels:
 - intermediate
 roles:
-- developer
+- administrator
 products:
 - m365
 summary: |-
-  Inhalt ist das wichtigste digitale Asset für jedes Unternehmen. In diesem Kurs lernen Sie, wie man SharePoint Sites und OneDrive  planen, konfigurieren und verwalten kann, um moderne inhaltliche Services zu ermöglichen, die die Bestandteile des Lebenszyklus transformieren. In diesem Kurs wird insbesondere die moderne SharePoint-Site-Struktur erläutert, z. B. SharePoint-Hubsites. Er bietet bewährte Praktiken für die Einführung und Bereitstellung von OneDrive for Business in Ihrem Unternehmen. Außerdem werden Freigabe, Sicherheit und Überwachung in SharePoint und OneDrive in Microsoft 365 behandelt. Darüber hinaus erfahren Sie, wie man Benutzerprofile und Apps mit den richtigen Berechtigungseinstellungen verwaltet. Außerdem wird erläutert, wie verwaltete Metadaten, Geschäfts-Konnektivitäts-Services und Suchvorgänge geplant und konfiguriert werden, damit Inhalte in Microsoft 365 gefunden, verwendet und reguliert werden können.
+  Inhalt ist das wichtigste digitale Asset für jedes Unternehmen. In diesem Kurs lernen Sie, wie man SharePoint Sites und OneDrive planen, konfigurieren und verwalten kann, um moderne inhaltliche Services zu ermöglichen, die die Bestandteile des Lebenszyklus transformieren. In diesem Kurs wird insbesondere die moderne SharePoint-Site-Struktur erläutert, z. B. SharePoint-Hubsites. Er bietet bewährte Praktiken für die Einführung und Bereitstellung von OneDrive for Business in Ihrem Unternehmen. Außerdem werden Freigabe, Sicherheit und Überwachung in SharePoint und OneDrive in Microsoft 365 behandelt. Darüber hinaus erfahren Sie, wie man Benutzerprofile und Apps mit den richtigen Berechtigungseinstellungen verwaltet. Außerdem wird erläutert, wie verwaltete Metadaten, Geschäfts-Konnektivitäts-Services und Suchvorgänge geplant und konfiguriert werden, damit Inhalte in Microsoft 365 gefunden, verwendet und reguliert werden können.
 
   #### Zielgruppenprofil
   Dieser Kurs richtet sich an IT-Experten, die Microsoft SharePoint und OneDrive in ihren Unternehmen bereitstellen und verwalten. Teilnehmer dieses Kurses interessieren sich für Microsoft SharePoint und OneDrive.
@@ -46,7 +46,7 @@ outlineSection: |-
   - Konfigurieren Sei SharePoint-Sites
   - Verwalten von SharePoint-Sites
 
-  Nach Abschluss dieses Moduls werden die Kursteilnehmer in der Lage sein&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Erstellen von SharePoint-Sites.
   - Verwalten von Speicherbeschränkungen für SharePoint-Sites.
   - Erstellen und Konfigurieren von SharePoint-Hubsites.
@@ -60,9 +60,9 @@ outlineSection: |-
   - OneDrive bereitstellen
   - OneDrive verwalten
 
-  Nach Abschluss dieses Moduls werden die Kursteilnehmer in der Lage sein&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Speicherbeschränkungen der Benutzer verwalten.
-  - Konfigurieren der Datenaufbewahrung in OneDrive.
+  Konfigurieren der Datenaufbewahrung in OneDrive.
   - Gruppenrichtlinien verwenden, um die Einstellungen des OneDrive-Sync-Client zu steuern.
   - Beschreiben Sie verschiedene Methoden zum Bereitstellen von OneDrive for Business.
   - Beschreiben Sie die Verwendung des administrativen Centers von OneDrive zum Verwalten von OneDrive for Business.
@@ -75,9 +75,9 @@ outlineSection: |-
   - Die Freigabe in SharePoint und OneDrive verwalten
   - Die Sicherheit in SharePoint und OneDrive verwalten
 
-  Nach Abschluss dieses Moduls werden die Kursteilnehmer in der Lage sein&#58;
-  - Die externe Freigabe in Microsoft SharePoint Online und OneDrive beschreiben.
-  - Optionen zum Verwalten des Gerätezugriffs auf Microsoft SharePoint Online und OneDrive beschreiben.
+  Nach Abschluss dieses Moduls können die Schüler&#58;
+  - Die externe Freigabe in Microsoft SharePoint und OneDrive beschreiben.
+  - Optionen zum Verwalten des Gerätezugriffs auf Microsoft SharePoint und OneDrive beschreiben.
   - Zeigen Sie Microsoft 365-Berichte an, die die Verwendung von SharePoint und OneDrive messen.
 
 
@@ -87,7 +87,7 @@ outlineSection: |-
   - Benutzerprofile verwalten
   - Apps verwalten
 
-  Nach Abschluss dieses Moduls werden die Kursteilnehmer in der Lage sein&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Beschreiben, wie man Benutzerprofileigenschaften konfiguriert.
   - Beschreiben, wie man Zielgruppen verwaltet.
   - Beschreiben, wie man mit dem App-Katalog benutzerdefinierte Apps erstellt.
@@ -99,7 +99,7 @@ outlineSection: |-
   - Planen und Konfigurieren von verwalteten Metadaten
   - Business Connectivity Services planen und konfigurieren
 
-  Nach Abschluss dieses Moduls werden die Kursteilnehmer in der Lage sein&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Die Funktionen der verwalteten Metadaten beschreiben.
   - Begriffsgruppen, Begriffssätze und Begriffe erstellen und verwalten.
   - Die wichtigsten Komponenten eines BDC-Modells erläutern.
@@ -113,9 +113,9 @@ outlineSection: |-
   - Suche planen
   - Suche konfigurieren
 
-  Nach Abschluss dieses Moduls werden die Kursteilnehmer in der Lage sein&#58;
-  - Den Unterschied zwischen modernen und klassischen Sucherfahrungen beschreiben.
+  Nach Abschluss dieses Moduls können die Schüler&#58;
+  Den Unterschied zwischen modernen und klassischen Sucherfahrungen beschreiben.
   - Beschreiben, wie man das Suchschema verwaltet.
-  - Verwendung und Bereitstellung von Abfrageregeln erläutern.
+  - Verwendung und Bereitstellung von Abfrageregeln erläutern
   - Die Verwendung und Bereitstellung der Ergebnisquelle erläutern.
 
