--- a/learn-certs-pr/courses/ms-050T00.yml
+++ b/learn-certs-pr/courses/ms-050T00.yml
@@ -21,6 +21,8 @@ skillsGained:
 - skill: Verfügbare Ressourcen und Tools beschreiben, die während des Migrationsprozesses eingesetzt werden können.
 - skill: Greifen Sie mit dem SharePoint Migrationsbewertungs-Tool (SMAT) auf Daten zu, die migriert werden sollen.
 - skill: Inhalte mit dem SharePoint Migrations-Tool (SPMT) in die Cloud migrieren.
+- skill: Inhalte mit Migration Manager in die Cloud migrieren.
+- skill: Inhalte mit Mover in die Cloud migrieren.
 - skill: Verwalten und Überwachen des Migrationsprozesses.
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
@@ -28,7 +30,7 @@ locales:
 levels:
 - intermediate
 roles:
-- developer
+- administrator
 products:
 - m365
 summary: |-
@@ -47,24 +49,24 @@ outlineSection: |-
   ### Modul 1&#58; SharePoint-Infrastruktur
   In diesem Modul geht es um die grundlegende SharePoint-Infrastruktur. Hier werden die Komponenten in der SharePoint-Farm beschrieben. Außerdem wird erläutert, wie man die SharePoint-Farm installiert und konfiguriert.
   #### Lektionen
-  - Eine SharePoint Farm planen
-  - SharePoint 2019
+  - Planen Sie eine SharePoint-Farm
+  - Übersicht über SharePoint Server 2019
   - Installieren und Verwalten der SharePoint-Farm
 
-  Nach Abschluss dieses Moduls werden die Kursteilnehmer in der Lage sein&#58;
-  - Die MinRole-Funktion in SharePoint 2019 beschreiben.
-  - Beschreiben, wie man SharePoint 2019 installiert und konfiguriert.
-  - Beschreiben, wie man Hochverfügbarkeit für SharePoint implementiert.
-  - Farmsicherungen und Wiederherstellung planen.
+  Nach Abschluss dieses Moduls können die Schüler&#58;
+  - Die MinRole-Funktion in SharePoint 2019 beschreiben
+  - Beschreiben, wie man SharePoint 2019 installiert und konfiguriert
+  - Beschreiben, wie man Hochverfügbarkeit für SharePoint implementiert
+  - Farmsicherungen und Wiederherstellung planen
 
 
   ### Modul 2&#58; SharePoint-Authentifizierung und -Sicherheit
   In diesem Modul geht es um SharePoint-Authentifizierung und -Sicherheit. Hier werden verschiedene Authentifizierungsmethoden in SharePoint 2019 eingeführt.
   #### Lektionen
   - Authentifizierung planen
-  - Konfigurieren der Verbundauthentifizierung
+  - Konfigurieren Sie Verbundauthentifizierung
 
-  Nach Abschluss dieses Moduls werden die Kursteilnehmer in der Lage sein&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Authentifizierungsinfrastruktur in SharePoint 2019 beschreiben.
   - NTLM- und Kerberos-Authentifizierung beschreiben.
   - Server-zu-Server-Authentifizierung beschreiben.
@@ -74,11 +76,11 @@ outlineSection: |-
   ### Modul 3&#58; SharePoint Content-Management
   In diesem Modul geht es um SharePoint Content-Management. Die Inhaltsstruktur in SharePoint wird hier erläutert. Außerdem werden Details zur Autorisierung und zum Inhaltszugriff in SharePoint bereitgestellt.
   #### Lektionen
-  - Übersicht über die SharePoint-Inhaltsstruktur
-  - Verwalten des Zugriffs auf Inhalte
-  - Site Sammlungen verwalten
+  - Planen Sie Websites und Websitesammlungen
+  - Verwalten Sie den Zugriff auf Inhalte
+  - Konfigurieren und Verwalten von Websitesammlungen
 
-  Nach Abschluss dieses Moduls werden die Kursteilnehmer in der Lage sein&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Sitesammlungskonzepte erläutern.
   - Beschreiben, wie man Sitesammlungen erstellt.
   - Beschreiben, wie man die Autorisierung in SharePoint 2019 plant.
@@ -90,10 +92,10 @@ outlineSection: |-
   In diesem Modul dreht sich alles um SharePoint-Serviceanwendungen und -Arbeitsabläufe. Hier wird beschrieben, wie eine BCS-Dienstanwendung und eine Benutzerprofildienstanwendung bereitgestellt und verwaltet werden. Insbesondere wird erläutert, wie BDC-Modelle importiert und exportiert und Benutzereigenschaften in SharePoint importiert werden.
   #### Lektionen
   - SharePoint Service-Anwendungen und Arbeitsabläufe
-  - Planen und Konfigurieren von Business Connectivity Services (BCS) und Secure Store
-  - Planen und Konfigurieren von Benutzerprofilen
+  - Planen und konfigurieren Sie den BCS- und Secure Store-Dienst
+  - Planen und konfigurieren Sie den Benutzerprofil-Service
 
-  Nach Abschluss dieses Moduls werden die Kursteilnehmer in der Lage sein&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Die wichtigsten Komponenten eines BDC-Modells erläutern.
   - Die allgemeine Architektur von BCS beschreiben.
   - Bereitstellen einer BDC-Service-Anwendungsinstanz.
@@ -107,20 +109,20 @@ outlineSection: |-
   - Beschreiben, wie man SharePoint Active Directory-Import und die Synchronisierung plant.
 
 
-  ### Modul 5&#58; Planen und Konfigurieren verwalteter Metadaten
+  ### Modul 5&#58; Planen und Konfigurieren des verwalteten Metadaten-Service
   Dieses Modul befasst sich mit integralen Funktionen wie dem verwalteten Metadata-Service, Inhaltstypen und Begriffssätzen, mit denen man eine Informationsarchitektur erstellen und verbreiten kann. Hier werden der Zweck von Inhaltstypen sowie die Konzepte für den verwalteten Metadaten-Service vorgestellt, einschließlich Taxonomien, Begriffssätzen und Unternehmensschlüsselwörtern.
   #### Lektionen
   - Inhaltstypen verwalten
-  - Verwaltete Metadaten
-  - Den verwalteten Metadatendienst konfigurieren
+  - Übersicht über den verwalteten Metadaten-Service
+  - Konfigurieren des verwalteten Metadaten-Service
 
-  Nach Abschluss dieses Moduls werden die Kursteilnehmer in der Lage sein&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Die Funktion und Verwendung von Inhaltstypen erläutern.
   - Die Funktionen des verwalteten Metadatadienstes beschreiben.
   - Erklären, wie man einen Inhaltstyp für mehrere Sitesammlungen erstellt und veröffentlicht.
   - Die Funktionen des verwalteten Metadatendienstes identifizieren.
   - Begriffsgruppen, Begriffssätze und Begriffe erstellen und verwalten.
-  - Konfigurieren von Begriffssätzen und Begriffen für die verwaltete Navigation.
+  - Begriffssätze und Begriffe für die verwaltete Navigation konfigurieren.
 
 
   ### Modul 6&#58; Suche planen und konfigurieren
@@ -130,7 +132,7 @@ outlineSection: |-
   - Konfigurieren der Unternehmenssuche
   - Verwalten der Unternehmenssuche
 
-  Nach Abschluss dieses Moduls werden die Kursteilnehmer in der Lage sein&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Die Funktion von Suchkomponenten beschreiben.
   - Erklären, wie eine Suchtopologie geplant und konfiguriert wird.
   - Beschreiben, wie man Inhaltsquellen plant und konfiguriert.
@@ -138,7 +140,7 @@ outlineSection: |-
   - Beschreiben, wie man Crawl-Regeln plant und konfiguriert.
   - Beschreiben, wie man das Suchschema verwaltet.
   - Beschreiben, wie man das Suchcenter konfiguriert.
-  - Verwendung und Bereitstellung von Abfrageregeln erläutern.
+  - Verwendung und Bereitstellung von Abfrageregeln erläutern
   - Die Verwendung und Bereitstellung der Ergebnisquelle erläutern.
 
 
@@ -148,7 +150,7 @@ outlineSection: |-
   - Übersicht über SharePoint-Hybridszenarien
   - SharePoint Server-Hybrid planen
 
-  Nach Abschluss dieses Moduls werden die Kursteilnehmer in der Lage sein&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Verfügbare SharePoint-Hybridszenarien beschreiben.
   - Anforderungen für die SharePoint-Hybridkonfiguration beschreiben.
   - Den SharePoint Server-Hybrid planen.
@@ -157,10 +159,10 @@ outlineSection: |-
   ### Modul 8&#58; SharePoint-Hybridszenarien implementieren
   Dieses Modul konzentriert sich auf die Implementierung von SharePoint-Hybridszenarien. Insbesondere werden die Roadmaps für die Hybridkonfiguration erläutert, einschließlich der Konfiguration von Hybrid-Infrastruktur und Hybrid-Picker. Außerdem wird das lokale Datengateway eingeführt, um die Verwendung von Microsoft 365-Funktionen im SharePoint Server 2019 zu ermöglichen.
   #### Lektionen
-  - Implementieren von SharePoint-Hybridszenarien
+  - Implementieren Sie SharePoint-Hybridszenarien
   - Lokale Daten-Gateway konfigurieren
 
-  Nach Abschluss dieses Moduls werden die Kursteilnehmer in der Lage sein&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - SharePoint-Hybridszenarien konfigurieren.
   - Lokale Daten-Gateway konfigurieren.
 
@@ -171,33 +173,35 @@ outlineSection: |-
   - Übersicht über die SharePoint-Hybridsuche
   - SharePoint-Hybridsuche konfigurieren
 
-  Nach Abschluss dieses Moduls werden die Kursteilnehmer in der Lage sein&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Den Unterschied zwischen Cloud Hybridsuche und hybridverbundener Suche beschreiben.
   - Verschiedene Arten der Hybridsuche bewerten.
   - Die Cloud-Hybridsuche konfigurieren.
   - Hybride Suchergebnisse konfigurieren.
 
 
-  ### Modul 10&#58; Einführung der Migration
+  ### Modul 10&#58; Planen der Migration von Inhalten
   In diesem Modul geht es darum, den Migrationsprozess in die Cloud zu planen. Hier wird ein Überblick über Ressourcen und Tools geboten, die während des Migrationsprozesses eingesetzt werden können.
   #### Lektionen
-  - Migrationsübersicht
-  - Nutzung von FastTrack- und Partner-Services
+  - Übersicht über die Migration von Inhalten
+  - Bereiten Sie die Inhaltsmigration vor
 
-  Nach Abschluss dieses Moduls werden die Kursteilnehmer in der Lage sein&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Planen des Inhaltsmigrationsprozesses.
   - Verfügbare Ressourcen und Tools beschreiben, die während des Migrationsprozesses eingesetzt werden können.
 
 
-  ### Modul 11&#58; Migration zu SharePoint Online
+  ### Modul 11&#58; Migrieren von Inhalten zu Microsoft 365
   Dieses Modul konzentriert sich auf die Verwendung des SharePoint-Migrationstools (SPMT) zum Migrieren von Inhalten in die Cloud. Insbesondere werden die Anforderungen und Einschränkungen von SPMT erörtert. Es werden verschiedene Migrationsmethoden für verschiedene Datenquellen eingeführt, z. B. Dateifreigaben und SharePoint-Inhalte.
   #### Lektionen
-  - Bereiten Sie die Migration vor
-  - Migrieren Sie Inhalte in die Cloud
-  - Verwalten und Überwachen des Migrationsprozesses
+  - Migrieren von Inhalten mit SPMT
+  - Migrieren von Inhalten mit Migration Manager
+  - Migrieren von Inhalten mit Mover
 
-  Nach Abschluss dieses Moduls werden die Kursteilnehmer in der Lage sein&#58;
+  Nach Abschluss dieses Moduls können die Schüler&#58;
   - Greifen Sie mit dem SharePoint Migrationsbewertungs-Tool (SMAT) auf Daten zu, die migriert werden sollen.
   - Inhalte mit dem SharePoint Migrations-Tool (SPMT) in die Cloud migrieren.
+  - Inhalte mit Migration Manager in die Cloud migrieren.
+  - Inhalte mit Mover in die Cloud migrieren.
   - Verwalten und Überwachen des Migrationsprozesses.
 
