--- a/learn-certs-pr/d365-finance-and-operations-apps-solution-architect-expert.yml
+++ b/learn-certs-pr/d365-finance-and-operations-apps-solution-architect-expert.yml
@@ -6,7 +6,7 @@ metadata:
 uid: certification.d365-finance-and-operations-apps-solution-architect-expert
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
 summary: |-
-  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
 
   Solution Architects für Finanz- und Betriebsanwendungen in Microsoft Dynamics 365 sind vertrauenswürdige Berater, die die von Unternehmen empfohlenen Vorgehensweisen, Softwarefunktionen und die Bereitstellung von Implementierungen verstehen, damit sie die Mitglieder des Implementierungsteams zur Implementierung von Dynamics-Lösungen führen können, mit denen die vordefinierten Implementierungsziele erreicht werden können.
 subTitle: Solution Architects für Finanz- und Betriebsanwendungen in Microsoft Dynamics 365 sind vertrauenswürdige Berater, die die von Unternehmen empfohlenen Vorgehensweisen, Softwarefunktionen und die Bereitstellung von Implementierungen verstehen, damit sie die Mitglieder des Implementierungsteams zur Implementierung von Dynamics-Lösungen führen können, mit denen die vordefinierten Implementierungsziele erreicht werden können.
@@ -21,7 +21,7 @@ roles:
 - solution-architect
 type: role-based
 products:
-- dynamics
+- dynamics-365
 courses:
 - uid: course.mb-700t00
 paths:
@@ -39,22 +39,25 @@ prerequisites:
 - uid: certification.d365-finance-and-operations-apps-developer-associate
   isOptional: false
 resources:
-- title: Lernpfad zur Zertifizirung
-  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Dynamics 365: Finance and Operations Apps Solution Architect Expert.'
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4vyT7
+- title: Zertifizierungsposter
+  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
+- title: Reise zur Zertifizierung
+  description: Informieren Sie sich über Schritte zur Zertifizierung und die verfügbaren Ressourcen, die Sie bei der Vorbereitung unterstützen können.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcRK
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Zertifizierungsposter
-  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+- title: Lernpfad zur Zertifizirung
+  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4C7Gm
 - title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: deals.md
-- title: Unterstützung von Zertifizierungen
-  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
-  href: help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
+- title: Unterstützung von Zertifizierungen
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+  href: help.md
 
