--- a/learn-certs-pr/exams/70-486.yml
+++ b/learn-certs-pr/exams/70-486.yml
@@ -6,20 +6,20 @@ metadata:
 uid: exam.70-486
 displayName: 70-486
 summary: |+
-  <div><div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div><div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
   <div><strong>Diese Prüfung wird am 31. Januar 2021 um 23&#58;59 Uhr (Ortszeit) eingestellt. Nach diesem Datum können Sie die Prüfung nicht mehr ablegen. Erfahren Sie mehr über <a href='/learn/certifications/retired-certification-exams'>bevorstehende Prüfungseinstellungen</a>.<br/><br/></strong></div>
   </div>
 
   Kandidaten für diese Prüfung sind professionelle Entwickler, die mit Microsoft Visual Studio 2017 und ASP.NET Web-Lösungen entwerfen und entwickeln. Kandidaten sollten mindestens drei bis fünf Jahre Erfahrung in der Entwicklung von Microsoft ASP.NET MVC-basierten Lösungen und Kenntnisse der Microsoft Azure Web Apps haben.
 
   Die Kandidaten sollten auch die folgenden Erfahrungen mitbringen&#58;
-  - Entwerfen und Entwickeln von Webanwendungen in einem ASP.NET MVC-Modell
-  - Planung und Gestaltung von Benutzerinteraktionslösungen auf der Grundlage von Geschäftsanforderungen
+  Entwerfen und Entwickeln von Webanwendungen in einem ASP.NET MVC-Modell
+  Planung und Gestaltung von Benutzerinteraktionslösungen auf der Grundlage von Geschäftsanforderungen
   - Erfahrung mit dem gesamten Lebenszyklus der Softwareentwicklung von Webanwendungen
   - Entwicklung und Bereitstellung in mehrstufigen Umgebungen, einschließlich Azure
   - Konzeption und Entwicklung von asynchronen Lösungen
 
-  <div style='font-weight&#58; bold;'><br/>Hinweis&#58; Prüfungs-Updates gibt es dem 15. Januar 2018. Laden Sie den Änderungsbeleg für Prüfung Nr 486 herunter und lesen Sie ihn durch, um mehr über diese Änderungen und deren Auswirkungen auf die Kompetenzbemessung zu erfahren.</div>
+  <div><strong><br/>Hinweis&#58; Ab dem 15. Januar 2018 gibt es Prüfungsaktualisierungen. Laden Sie den Änderungsbeleg für Prüfung Nr 486 herunter und lesen Sie ihn durch, um mehr über diese Änderungen und deren Auswirkungen auf die Kompetenzbemessung zu erfahren.</strong></div>
 subTitle: Kandidaten für diese Prüfung sind professionelle Entwickler, die mit Microsoft Visual Studio 2017 und ASP.NET Web-Lösungen entwerfen und entwickeln. Kandidaten sollten mindestens drei bis fünf Jahre Erfahrung in der Entwicklung von Microsoft ASP.NET MVC-basierten Lösungen und Kenntnisse der Microsoft Azure Web Apps haben.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4trkK
@@ -47,7 +47,8 @@ roles:
 products:
 - aspnet-core
 courses:
-- uid: course.20486
+- uid: course.20486-c
+- uid: course.20486-d
 relatedCertifications:
 - related:
     uid: certification.mcsa-web-applications-certification
