--- a/learn-certs-pr/exams/mb-200.yml
+++ b/learn-certs-pr/exams/mb-200.yml
@@ -7,13 +7,14 @@ uid: exam.mb-200
 displayName: MB-200
 summary: |-
   <div>
-  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am 1. Juli 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/><br/></div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
+  <div><strong> Der Inhalt dieser Prüfung wurde am 1. Juli 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.</strong><br/><br/></div>
+  <div><strong>DIESE PRÜFUNG WIRD AM 31. DEZEMBER 2020 EINGESTELLT. Für weitere Informationen, <a href="https://aka.ms/microsoftlearncommunity">besuchen Sie unseren Blog</a> und lesen Sie unsere Beiträge zu Prüfungseinstellungen. Hinweis&#58; Die Prüfungen werden um 23&#58;59 Uhr Zentrale Standardzeit (USA) eingestellt.</strong><br/><br/></div>
   </div>
 
-  Kandidaten für dieses examens sind funktionale Berater, die Zugang zu den Funktionen und der Funktionalität des unternehmenslizenzierten Produkts haben. Als funktionaler Berater kennt der Kandidat gebündelte Versionen von Features, arbeitet aber nicht in erster Linie mit diesen gebündelten Produkten.
+  Kandidaten für diese Prüfung sind funktionale Berater, die Zugang zu den Funktionen und der Funktionalität des unternehmenslizenzierten Produkts haben. Als funktionaler Berater kennt der Kandidat gebündelte Versionen von Features, arbeitet aber nicht in erster Linie mit diesen gebündelten Produkten.
 
-  Die Kandidaten sind in erster Linie dafür verantwortlich, das System so zu konfigurieren, dass es den Kundenbedürfnissen entspricht, Designaufgaben im Zusammenhang mit der Implementieren neuer Funktionen und Funktionen sowie der Implementieren und dem Test von Systemänderungen durchzuführen.
+  Die Kandidaten sind in erster Linie dafür verantwortlich, das System so zu konfigurieren, dass es den Kundenbedürfnissen entspricht, Designaufgaben im Zusammenhang mit dem Implementieren neuer Funktionen sowie dem Implementieren und dem Test von Systemänderungen durchzuführen.
 
   Die Kandidaten planen das funktionale Design für Lösungen, setzen einen Application Lifecycle Management (ALM)-Prozess um, migrieren Daten und Objekte aus Legacy-Systemen und externen Systemen, integrieren Power Platform mit anderen Systemen und verwalten die Power Platform-Umgebung.
 subTitle: 'Diese Prüfung misst Ihre Kompetenz, die folgenden technischen Aufgaben zu erfüllen: Erkennen, Planen und Analysieren, Verwalten von Benutzererfahrungsdesign, Verwalten von Einheiten und Daten, Implementieren von Sicherheit, Implementieren von Integration, und Durchführen von Lösungsimplementierungen und Tests.'
@@ -34,10 +35,11 @@ skills:
 - Sicherheit implementieren (5-10%)
 - Integration implementieren (15-20%)
 - Durchführung von Lösungsimplementierungen und Tests (25-30%)
+retirementDate: 12/31/2020
 roles:
 - functional-consultant
 products:
-- dynamics
+- dynamics-365
 - dynamics-sales
 - dynamics-marketing
 - dynamics-field-service
@@ -79,7 +81,7 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
+  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
