--- a/learn-certs-pr/exams/mb-210.yml
+++ b/learn-certs-pr/exams/mb-210.yml
@@ -7,11 +7,11 @@ uid: exam.mb-210
 displayName: MB-210
 summary: |-
   <div>
-  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'> Der Inhalt dieser Prüfung wurde am 1. Juli 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/><br/></div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
+  <div><strong>Der Inhalt dieser Prüfung wird am 2. Oktober 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div>
   </div>
 
-  Kandidaten für dieses examens sind Dynamics 365 Funktionsberater mit Vertriebserfahrung. Die Kandidaten sind für die Implementieren von Lösungen verantwortlich, die einen Vertriebslebenszyklus unterstützen, um effizient und effektiv zu arbeiten und Umsatzziele, Geschäftsstrategien und Unternehmensziele zu erreichen.
+  Kandidaten für diese Prüfung sind Dynamics 365 Funktionsberater mit Vertriebserfahrung. Die Kandidaten sind für die Implementierung von Lösungen verantwortlich, die einen Vertriebslebenszyklus unterstützen, um effizient und effektiv zu arbeiten und Umsatzziele, Geschäftsstrategien und Unternehmensziele zu erreichen.
 
   Die Kandidaten sind verantwortlich für die Konfiguration und Erweiterung der Kernfunktionalität von Leitfäden, Kontakten, Konten, Verkaufschancen und unterstützenden Einrichtungen, um die im Unternehmen bestehenden Verkaufsprozesse abzubilden. Sie identifizieren Möglichkeiten, Power Apps zu nutzen, um einheitliche Erlebnisse für alle Geräte zu entwickeln, Power Automate für die Anwendungsintegration, Geschäftsprozessabläufe und andere Automatisierungstools, um eine Anwendung zu erstellen, die die "Lead to cash journey" unterstützt und beschleunigt.
 
@@ -19,20 +19,21 @@ summary: |-
 subTitle: 'Diese Prüfung misst Ihre Kompetenz, die folgenden technischen Aufgaben zu erfüllen: Konfiguration durchführen, Kernverkaufseinheiten verwalten und Verkaufseinheiten verwalten.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VUjN
+practiceTestUrl: https://in.mindhub.com/mb-210-microsoft-dynamics-365-sales-microsoft-official-practice-test/p/MU-MB-210?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-210&examname=Exam%20MB-210:%20Microsoft%20Dynamics%20365%20for%20Sales&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-210
 locales:
 - en
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am 1. Juli 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
+- Der Inhalt dieser Prüfung wird am 2. Oktober 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.
 - Konfiguration durchführen (40-45%)
 - Verwaltung der wichtigsten Verkaufseinheiten (20-25%)
-- Verkaufsbereiche verwalten (35-40%)
+- Verwaltung der Verkaufseinheiten (35-40%)
 roles:
 - functional-consultant
 products:
-- dynamics
+- dynamics-365
 - dynamics-sales
 exams:
 - uid: exam.mb-200
@@ -47,14 +48,14 @@ relatedCertifications:
     uid: certification.d365-functional-consultant-sales
 resources:
 - title: Lernpfad zur Zertifizirung
-  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Dynamics 365 Sales Functional Consultant Associate.'
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35xKa
+  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4C54X
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
-  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
 - title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
@@ -65,7 +66,7 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
+  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
