--- a/learn-certs-pr/exams/mo-200.yml
+++ b/learn-certs-pr/exams/mo-200.yml
@@ -6,10 +6,10 @@ metadata:
 uid: exam.mo-200
 displayName: MO-200
 summary: |-
-  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
 
-  Die Prüfung umfasst die Fähigkeit, eine Arbeitsmappe mit mehreren Blättern zu erstellen und zu bearbeiten und ein grafisches Element zur visuellen Darstellung von Daten zu verwenden. Dazu gehören zum Beispiel professionell aussehende Kostenaufstellungen, Finanzübersichten, Teamleistungstabellen, Rechnungen und Dateneingabeprotokolle. Von den Kandidaten wird erwartet, dass sie die korrekte Anwendung der Hauptfunktionen von Excel demonstrieren und Aufgaben unabhängig ausführen können.
-subTitle: dieses examens misst die Kompetenz in den Grundlagen der Erstellung und Verwaltung von Arbeitsblättern und Arbeitsmappen, der Erstellung von Zellen und Bereichen, der Erstellung von Tabellen, der Anwendung von Formeln und Funktionen sowie der Erstellung von Diagrammen und Objekten. Die Prüfung umfasst die Fähigkeit, eine Arbeitsmappe mit mehreren Blättern zu erstellen und zu bearbeiten und ein grafisches Element zur visuellen Darstellung von Daten zu verwenden. Dazu gehören zum Beispiel professionell aussehende Kostenaufstellungen, Finanzübersichten, Teamleistungstabellen, Rechnungen und Dateneingabeprotokolle.
+  Diese Prüfung umfasst die Fähigkeit, eine Arbeitsmappe mit mehreren Blättern zu erstellen und zu bearbeiten und ein grafisches Element zur visuellen Darstellung von Daten zu verwenden. Arbeitsmappenbeispiele umfassen professionell aussehende Budgets, Jahresabschlüsse, Team-Performance-Charts, Verkaufsrechnungen und Dateneingabeprotokolle. Von den Kandidaten wird erwartet, dass sie die korrekte Anwendung der Hauptfunktionen von Excel demonstrieren und Aufgaben unabhängig ausführen können.
+subTitle: Diese Prüfung misst die Kompetenz in den Grundlagen der Erstellung und Verwaltung von Arbeitsblättern und Arbeitsmappen, der Erstellung von Zellen und Bereichen, der Erstellung von Tabellen, der Anwendung von Formeln und Funktionen sowie der Erstellung von Diagrammen und Objekten. Die Prüfung umfasst die Fähigkeit, eine Arbeitsmappe mit mehreren Blättern zu erstellen und zu bearbeiten und ein grafisches Element zur visuellen Darstellung von Daten zu verwenden. Arbeitsmappenbeispiele umfassen professionell aussehende Budgets, Jahresabschlüsse, Team-Performance-Charts, Verkaufsrechnungen und Dateneingabeprotokolle.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3WXlg
 providers:
@@ -26,12 +26,17 @@ locales:
 - pt-br
 - es
 - it
+- ru
+- ja
+- pl
+- el-gr
+- zh-cn
 levels:
 - intermediate
 skills:
 - Verwaltung von Arbeitsblättern und Arbeitsmappen (10-15%)
 - Verwalten von Datenzellen und Bereichen (20-25%)
-- Verwalten von Tabellen und Tabellendaten (15-20%)
+- Verwaltung von Tabellen und Tabellendaten (15-20%)
 - Operationen mit Hilfe von Formeln und Funktionen durchführen (20-25%)
 - Charts verwalten (20-25%)
 roles:
@@ -50,7 +55,7 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
+  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
