--- a/learn-certs-pr/exams/mo-300.yml
+++ b/learn-certs-pr/exams/mo-300.yml
@@ -6,10 +6,10 @@ metadata:
 uid: exam.mo-300
 displayName: MO-300
 summary: |-
-  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
 
-  dieses examens behandelt die Fähigkeit, Präsentationen zu erstellen und zu verwalten, Formen und Folien einzufügen und zu formatieren, Folieninhalte zu erstellen, Übergänge und Animationen anzuwenden und mehrere Präsentationen zu verwalten. Beispielpräsentationen umfassen professionelle Verkaufspräsentationen, Angestelltenschulungen, Ausbildermaterial und Kiosk Slideshows Von den Kandidaten wird erwartet, dass sie die korrekte Anwendung der Hauptfunktionen von PowerPoint demonstrieren und Aufgaben unabhängig ausführen können.
-subTitle: dieses examens misst die Kompetenz zum Erstellen, Bearbeiten und Verbessern von Präsentationen und Folien, einschließlich der Fähigkeit, Präsentationen zu erstellen und zu verwalten, Formen und Folien einzufügen und zu formatieren, Folieninhalte zu erstellen, Übergänge und Animationen anzuwenden und mehrere Präsentationen zu verwalten. Beispielpräsentationen umfassen professionelle Verkaufspräsentationen, Angestelltenschulungen, Ausbildermaterial und Kiosk Slideshows
+  Diese Prüfung behandelt die Fähigkeit, Präsentationen zu erstellen und zu verwalten, Formen und Folien einzufügen und zu formatieren, Folieninhalte zu erstellen, Übergänge und Animationen anzuwenden und mehrere Präsentationen zu verwalten. Beispielpräsentationen umfassen professionelle Verkaufspräsentationen, Angestelltenschulungen, Ausbildermaterial und Kiosk Slideshows Von den Kandidaten wird erwartet, dass sie die korrekte Anwendung der Hauptfunktionen von PowerPoint demonstrieren und Aufgaben unabhängig ausführen können.
+subTitle: Diese Prüfung misst die Kompetenz zum Erstellen, Bearbeiten und Verbessern von Präsentationen und Folien, einschließlich der Fähigkeit, Präsentationen zu erstellen und zu verwalten, Formen und Folien einzufügen und zu formatieren, Folieninhalte zu erstellen, Übergänge und Animationen anzuwenden und mehrere Präsentationen zu verwalten. Beispielpräsentationen umfassen professionelle Verkaufspräsentationen, Angestelltenschulungen, Ausbildermaterial und Kiosk Slideshows
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3WS8R
 providers:
@@ -27,6 +27,9 @@ locales:
 - ru
 - fr
 - pt-br
+- pl
+- el-gr
+- zh-cn
 levels:
 - intermediate
 skills:
@@ -51,7 +54,7 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
+  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
