--- a/learn-certs-pr/exams/pl-900.yml
+++ b/learn-certs-pr/exams/pl-900.yml
@@ -6,17 +6,23 @@ metadata:
 uid: exam.pl-900
 displayName: PL-900
 summary: |-
-  <div><div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am 13. Juli 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/><br/></div>
+  <div><div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
+  <div><strong> Der Inhalt dieser Prüfung wurde am 13. Juli 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.</strong><br/><br/></div>
   </div>
 
-  Kandidaten für diese Prüfung möchten die Produktivität verbessern, indem sie die Funktionen der Power Platform verstehen, grundlegende Geschäftsprozesse mit Power Automate automatisieren, grundlegende Datenanalysen mit Power BI durchführen, effektiver handeln, indem sie einfache Power Apps-Erfahrungen erstellen und mithilfe von Power Virtual Agents leistungsstarke Chatbots erstellen.
-subTitle: Diese Prüfung misst Ihre Fähigkeit, den Geschäftswert von Power Platform zu beschreiben. Identifizieren Sie die Kernkomponenten von Power Platform. Demonstrieren Sie die Funktionen von Power BI. Beschreiben der Funktionen von Power Apps. Demonstrieren Sie die Funktionen von Power Automate und den Geschäftswert von Power Virtual Agents.
+  Kandidaten für diese Prüfung möchten ihre Produktivität verbessern, indem sie die Funktionen der Power Platform verstehen, grundlegende Geschäftsprozesse mit Power Automate automatisieren, grundlegende Datenanalysen mit Power BI durchführen, effektiver handeln, indem sie einfache Power Apps-Erfahrungen erstellen und mithilfe von Power Virtual Agents leistungsstarke Chatbots erstellen.
+subTitle: Diese Prüfung misst Ihre Fähigkeit, den Geschäftswert von Power Platform zu beschreiben. Erkennen Sie die Kernkomponenten von Power Platform. Zeigen Sie die Funktionen von Power BI. Beschreiben der Funktionen von Power Apps. Zeigen Sie die Funktionen von Power Automate und den Geschäftswert von Power Virtual Agents.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43Nnn
 practiceTestUrl: https://www.mindhub.com/p/MU-PL-900?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
 locales:
 - en
+- es
+- de
+- zh-cn
+- fr
+- ko
+- ja
 providers:
 - providerType: pearson-vue
   examUrl: 'https://examregistration.microsoft.com/?locale=de-de&examcode=PL-900&examname=Exam%20PL-900:%20Microsoft%20Power%20Platform%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fpl-900'
@@ -28,11 +34,11 @@ levels:
 - beginner
 skills:
 - Der Inhalt dieser Prüfung wurde am 13. Juli 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
-- Den Geschäftswert der Power Platform verstehen (15-20%)
-- Identifizieren der Kernkomponenten von Power Platform (15-20%)
-- Demonstrieren Sie die Funktionen von Power BI (15-20%)
+- Den Geschäftswert der Power-Platform beschreiben (15-20%)
+- Die Kernkomponenten von Power-Platform erkennen (15-20%)
+- Zeigen Sie die Funktionen von Power BI (15-20%)
 - Beschreiben Sie die Funktionen von Power Apps (15-20%)
-- Demonstrieren Sie die Funktionen von Power Automate (15-20%)
+- Zeigen Sie die Funktionen von Power Automate (15-20%)
 - Den Geschäftswert von Power Virtual Agents veranschaulichen (10-15%)
 roles:
 - developer
@@ -47,14 +53,14 @@ relatedCertifications:
     uid: certification.power-platform-fundamentals
 resources:
 - title: Lernpfad zur Zertifizirung
-  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Power Platform Fundamentals.'
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4oeDu
+  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CfjH
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
-  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
 - title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
@@ -65,7 +71,7 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
+  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
