--- a/learn-certs-pr/mcsd-app-builder-certification.yml
+++ b/learn-certs-pr/mcsd-app-builder-certification.yml
@@ -4,14 +4,23 @@ metadata:
   title: 'MCSD: App Builder'
   description: 'MCSD: App Builder'
 uid: certification.mcsd-app-builder-certification
-iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
+iconUrl: /media/learn/certification/badges/mcsd-badge.svg
 summary: |-
   <div>
-  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
   <div><strong>Diese Zertifizierung endet am 31. Januar 2021. Nach diesem Datum können Sie diese Zertifizierung nicht mehr erhalten. Alle Zertifizierungen, die Sie vor deren Ablaufen erhalten haben, werden weiterhin auf Ihrem Transkript im <a href='https://www.microsoft.com/learning/dashboard.aspx'>Zertifizierungs-Dashboard</a> angezeigt. Sie können auch <a href='/learn/certifications/retired-certifications'>alle abgelaufenen Zertifizierungen durchsuchen</a>.</strong><br/><br/></div>
   </div>
 
   Diese Zertifizierung bestätigt, dass Sie über die erforderlichen Fähigkeiten verfügen, um moderne mobile und/oder Webanwendungen und -dienste zu erstellen.
+
+  Um die MCSD&#58; App Builder-Zertifizierung zu erhalten, erfüllen Sie die folgenden Anforderungen&#58;
+  - Erlangen Sie eine Voraussetzung für die Zertifizierung&#58;
+    - Voraussetzung Option 1&#58; [MCSA&#58; Webanwendungen](/learn/certifications/mcsa-web-applications-certification)
+    - Voraussetzung Option 2&#58; [MCSA&#58; Universelle Windows-Plattform](/learn/certifications/mcsa-universal-windows-platform)
+  - Und absolvieren Sie eine der Wahlprüfungen&#58;
+    - [70-357&#58; Entwicklung mobiler Apps](/learn/certifications/exams/70-357)
+    - [70-486&#58; Entwickeln von ASP.NET MVC-Webanwendungen](/learn/certifications/exams/70-486)
+    - [70-487&#58; Entwickeln von Microsoft Azure und Web-Services](/learn/certifications/exams/70-487)
 subTitle: Diese Zertifizierung bestätigt, dass Sie über die erforderlichen Fähigkeiten verfügen, um moderne mobile und/oder Webanwendungen und -dienste zu erstellen.
 levels:
 - advanced
@@ -29,6 +38,11 @@ exams:
 - uid: exam.70-357
 - uid: exam.70-486
 - uid: exam.70-487
+prerequisites:
+- uid: certification.mcsa-web-applications-certification
+  isOptional: false
+- uid: certification.mcsa-universal-windows-platform
+  isOptional: false
 resources:
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
