--- a/learn-certs-pr/mcse-business-applications.yml
+++ b/learn-certs-pr/mcse-business-applications.yml
@@ -7,20 +7,18 @@ uid: certification.mcse-business-applications
 iconUrl: /media/learn/certification/badges/mcse-badge.svg
 summary: |-
   <div>
-  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
   <div><strong>Diese Zertifizierung endet am 31. Januar 2021. Nach diesem Datum können Sie diese Zertifizierung nicht mehr erhalten. Alle Zertifizierungen, die Sie vor deren Ablaufen erhalten haben, werden weiterhin auf Ihrem Transkript im <a href='https://www.microsoft.com/learning/dashboard.aspx'>Zertifizierungs-Dashboard</a> angezeigt. Sie können auch <a href='/learn/certifications/retired-certifications'>alle abgelaufenen Zertifizierungen durchsuchen</a>.</strong><br/><br/></div>
   </div>
 
   Diese Zertifizierung bestätigt, dass Sie das Know-how haben, um mit Microsoft Dynamics 365 Technologien zu arbeiten und zu verwalten. Sie beginnen mit einer Grundlage in Microsoft Dynamics 365 und zeigen zusätzliche Expertise in einem oder mehreren geschäftsspezifischen Bereichen.
 
-  Bestehen Sie eine der folgenden Prüfungen, um die MCSE&#58; Business Applications Zertifizierung zu erhalten&#58;
-  - [MB2-716&#58; Microsoft Dynamics 365 Customization and Configuration](/learn/certifications/exams/mb2-716)
-  - [MB2-718&#58; Microsoft Dynamics 365 for Customer Service](/learn/certifications/exams/mb2-718)
-  - [MB2-719&#58; Microsoft Dynamics 365 for Marketing](/learn/certifications/exams/mb2-719)
-  - [MB6-895&#58; Financial Management in Microsoft Dynamics 365 for Finance and Operations](/learn/certifications/exams/mb6-895)
-  - [MB6-896&#58; Distribution and Trade in Microsoft Dynamics 365 for Finance and Operations](/learn/certifications/exams/mb6-896)
-  - [MB6-897&#58; Microsoft Dynamics 365 for Retail](/learn/certifications/exams/mb6-897)
-  - [MB6-898&#58; Microsoft Dynamics 365 for Talent](/learn/certifications/exams/mb6-898)
+  Um die MCSA&#58; Zertifizierung für Unternehmen zu erhalten, müssen Sie die folgenden Anforderungen erfüllen&#58;
+  - Verdienen Sie die vorausgesetzte Zertifizierung&#58; [MCSA&#58; Microsoft Dynamics 365 für den Betrieb](/learn/certifications/mcsa-microsoft-dynamics-365-for-operations)
+  - Und absolvieren Sie eine der Wahlprüfungen&#58;
+    - [MB2-716&#58; Microsoft Dynamics 365 Customization and Configuration](/learn/certifications/exams/mb2-716)
+    - [MB6-897&#58; Microsoft Dynamics 365 for Retail](/learn/certifications/exams/mb6-897)
+    - [MB6-898&#58; Microsoft Dynamics 365 for Talent](/learn/certifications/exams/mb6-898)
 subTitle: Diese Zertifizierung bestätigt, dass Sie das Know-how haben, um mit Microsoft Dynamics 365 Technologien zu arbeiten und zu verwalten. Sie beginnen mit einer Grundlage in Microsoft Dynamics 365 und zeigen zusätzliche Expertise in einem oder mehreren geschäftsspezifischen Bereichen.
 levels:
 - beginner
@@ -35,6 +33,9 @@ exams:
 - uid: exam.mb-2-716
 - uid: exam.mb-6-897
 - uid: exam.mb-6-898
+prerequisites:
+- uid: certification.mcsa-microsoft-dynamics-365-for-operations
+  isOptional: false
 resources:
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
