--- a/learn-certs-pr/microsoft-365-fundamentals.yml
+++ b/learn-certs-pr/microsoft-365-fundamentals.yml
@@ -2,11 +2,11 @@
 title: 'Microsoft 365 Certified: Fundamentals'
 metadata:
   title: 'Microsoft 365 Certified: Fundamentals'
-  description: Zeigen Sie, dass Sie die verfügbaren Optionen unter Microsoft 365 kennen und die Vorteile von Cloud Services, dem Software as a Service (SaaS) Cloud Modell, und der Implementieren des Microsoft 365 Cloud Dienstes.
+  description: 'Zeigen Sie, dass Sie die verfügbaren Optionen unter Microsoft 365 kennen und die Vorteile von Cloud Services, dem Software as a Service (SaaS) Cloud Modell, und der Implementieren des Microsoft 365 Cloud Dienstes.'
 uid: certification.microsoft-365-fundamentals
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
 summary: |-
-  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
 
   Zeigen Sie, dass Sie die verfügbaren Optionen unter Microsoft 365 kennen und die Vorteile von Cloud Services, dem Software as a Service (SaaS) Cloud Modell, und der Implementieren des Microsoft 365 Cloud Dienstes.
 subTitle: Zeigen Sie, dass Sie die verfügbaren Optionen unter Microsoft 365 kennen und die Vorteile von Cloud Services, dem Software as a Service (SaaS) Cloud Modell, und der Implementieren des Microsoft 365 Cloud Dienstes.
@@ -28,7 +28,10 @@ products:
 courses:
 - uid: course.ms-900t01
 paths:
-- uid: learn-m365.microsoft-365-fundamentals
+- uid: learn.wwl.m365-productivity-teamwork-solutions
+- uid: learn.wwl.m365-business-management-solutions
+- uid: learn.wwl.m365-security-compliance-capabilities
+- uid: learn.wwl.m365-licensing-service-support
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VRKj
 exams:
 - uid: exam.ms-900
