--- a/learn-certs-pr/power-apps-and-d365-solution-architect-expert.yml
+++ b/learn-certs-pr/power-apps-and-d365-solution-architect-expert.yml
@@ -2,14 +2,11 @@
 title: 'Microsoft Certified: Dynamics 365 + Power Platform Solution Architect Expert'
 metadata:
   title: 'Microsoft Certified: Dynamics 365 + Power Platform Solution Architect Expert'
-  description: Lösungsarchitekten für Microsoft Dynamics 365 + Power-Plattform führen erfolgreiche Implementierungen durch und konzentrieren sich auf Lösungen, die allgemeine geschäftliche und technische Anforderungen von Unternehmen erfüllen.
+  description: Lösungsarchitekten für Microsoft Dynamics 365 + Power Platform führen erfolgreiche Implementierungen durch und konzentrieren sich auf Lösungen, die allgemeine geschäftliche und technische Anforderungen von Unternehmen erfüllen.
 uid: certification.power-apps-and-d365-solution-architect-expert
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
-summary: |-
-  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
-
-  Lösungsarchitekten für Microsoft Dynamics 365 + Power-Plattform führen erfolgreiche Implementierungen durch und konzentrieren sich auf Lösungen, die allgemeine geschäftliche und technische Anforderungen von Unternehmen erfüllen.
-subTitle: Lösungsarchitekten für Microsoft Dynamics 365 + Power-Plattform führen erfolgreiche Implementierungen durch und konzentrieren sich auf Lösungen, die allgemeine geschäftliche und technische Anforderungen von Unternehmen erfüllen.
+summary: "<div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>\r\n\r\nLösungsarchitekten für Microsoft Dynamics 365 + Power Platform führen erfolgreiche Implementierungen durch und konzentrieren sich auf Lösungen, die allgemeine geschäftliche und technische Anforderungen von Unternehmen erfüllen.  "
+subTitle: Lösungsarchitekten für Microsoft Dynamics 365 + Power Platform führen erfolgreiche Implementierungen durch und konzentrieren sich auf Lösungen, die allgemeine geschäftliche und technische Anforderungen von Unternehmen erfüllen.
 levels:
 - advanced
 skills:
@@ -20,7 +17,7 @@ roles:
 - solution-architect
 type: role-based
 products:
-- dynamics
+- dynamics-365
 - power-apps
 courses:
 - uid: course.mb-600t00
@@ -41,22 +38,25 @@ prerequisites:
 - uid: certification.d365-functional-consultant-field-service
   isOptional: false
 resources:
-- title: Lernpfad zur Zertifizirung
-  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Dynamics 365 + Power Platform Solution Architect Expert.'
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4tKUY
+- title: Zertifizierungsposter
+  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
+- title: Reise zur Zertifizierung
+  description: Informieren Sie sich über Schritte zur Zertifizierung und die verfügbaren Ressourcen, die Sie bei der Vorbereitung unterstützen können.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4C7FB
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Zertifizierungsposter
-  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+- title: Lernpfad zur Zertifizirung
+  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Ca9W
 - title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: deals.md
-- title: Unterstützung von Zertifizierungen
-  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
-  href: help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
+- title: Unterstützung von Zertifizierungen
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+  href: help.md
 
